--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.CreateTourneyController">
    <children>
-      <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <VBox alignment="CENTER" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <!-- Título -->
          <Text text="Create Tourney" textAlignment="CENTER">
             <font>
@@ -23,42 +23,31 @@
          </Text>
 
          <!-- Inputs Principales -->
-         <VBox alignment="CENTER" spacing="15.0">
+         <VBox alignment="CENTER" spacing="10.0">
             <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" prefWidth="300.0" />
             <MFXTextField fx:id="txtMatchTime" floatingText="Time per Match (Minutes)" prefWidth="300.0" />
             <ComboBox fx:id="tglLstSportType" prefWidth="300.0" promptText="Sport Type" />
          </VBox>
 
-         <!-- Slider para Cantidad de Equipos -->
-<VBox alignment="CENTER" spacing="10.0">
-    <Text text="Cantidad de Equipos" />
-    <HBox alignment="CENTER" spacing="10.0">
-        <MFXSlider fx:id="teamQuantitySlider" prefWidth="300.0" />
-    </HBox>
-</VBox>
-
-
-         <!-- Sección de Equipos -->
-         <VBox alignment="CENTER" spacing="15.0">
-            <Text text="Teams Management">
-               <font>
-                  <Font name="Arial" size="12.0" />
-               </font></Text>
-            <HBox alignment="CENTER" spacing="10.0">
-               <Button fx:id="btnAddTeam" prefWidth="80.0" text="Add" />
-               <MFXTextField fx:id="txtTeamName" floatingText="Team Name" prefWidth="200.0" />
-            </HBox>
-            <HBox alignment="CENTER" spacing="10.0">
-               <Button fx:id="btnDeleteTeam" prefWidth="80.0" text="Delete" />
-               <MFXTextField fx:id="txtDeleteTeamName" floatingText="Team to Delete" prefWidth="200.0" />
-            </HBox>
-            <Button fx:id="btnAddRandomTeam" prefWidth="120.0" text="Add Random" />
-            <TableView fx:id="tblTeams" prefHeight="150.0" prefWidth="400.0">
+         <!-- Tabla de Equipos -->
+         <VBox alignment="CENTER" spacing="10.0">
+            <Text text="Teams" />
+            <TableView fx:id="tblTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="250.0" prefWidth="400.0" VBox.vgrow="ALWAYS">
                <columns>
-                  <TableColumn prefWidth="400.0" text="Team Name" />
+                  <TableColumn fx:id="colTeamName" prefWidth="200.0" text="Availables" />
+                  <TableColumn fx:id="colSelected" prefWidth="200.0" text="Selected" />
                </columns>
             </TableView>
          </VBox>
+
+         <!-- Selector de Cantidad de Equipos -->
+         <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
+            <Text text="Select the number of teams (between 32 and 64):" />
+            <MFXSlider fx:id="sliderTeamCount" max="64" min="32" prefWidth="300.0" value="32" />
+              <Button fx:id="btnAdjustTeams" onAction="#adjustSelectedTeamsSlice" prefWidth="150.0" text="Adjust Election" />
+
+            
+             </VBox>
 
          <!-- Botones Inferiores -->
          <HBox alignment="CENTER" spacing="20.0">
