--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/CreateTourney.fxml
@@ -15,41 +15,40 @@
 
 <AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.CreateTourneyController">
    <children>
-      <VBox alignment="CENTER" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <VBox alignment="CENTER" spacing="25.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
          <!-- Título -->
          <Text text="Create Tourney" textAlignment="CENTER">
             <font>
                <Font name="Arial" size="24.0" />
             </font>
+            <VBox.margin>
+               <Insets />
+            </VBox.margin>
          </Text>
-         <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="15.0" VBox.vgrow="ALWAYS">
+         <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="100.0" spacing="25.0" VBox.vgrow="ALWAYS">
             <children>
       
                <!-- Inputs Principales -->
-               <VBox alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" HBox.hgrow="ALWAYS">
+               <VBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="100.0" spacing="15.0" HBox.hgrow="ALWAYS">
                   <MFXTextField fx:id="txtTourneyName" floatingText="Tourney Name" prefWidth="300.0" />
                   <ComboBox fx:id="tglLstSportType" prefWidth="300.0" promptText="Sport Type" />
                </VBox>
-               <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" HBox.hgrow="ALWAYS">
+               <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="100.0" spacing="15.0" HBox.hgrow="ALWAYS">
                   <children>
                      <MFXTextField fx:id="txtMatchTime" floatingText="Time per Match (Minutes)" prefWidth="300.0" />
                        <Button fx:id="btnAdjustTeams" onAction="#adjustSelectedTeamsSlice" prefWidth="300.0" text="Adjust Election" />
                   </children>
                </VBox>
             </children>
-            <padding>
-               <Insets left="15.0" right="15.0" />
-            </padding>
          </HBox>
 
          <!-- Selector de Cantidad de Equipos -->
-         <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
+         <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="30.0" spacing="10.0" VBox.vgrow="ALWAYS">
             <Text text="Select the number of teams (between 32 and 64):" />
             <MFXSlider fx:id="sliderTeamCount" max="64" min="32" prefWidth="300.0" value="32" />
 
             
              </VBox>
-         <Text text="Teams" />
          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="30.0" VBox.vgrow="ALWAYS">
             <children>
                <TableView fx:id="tblTeams" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="250.0" prefWidth="400.0">
@@ -63,18 +62,12 @@
                   </columns>
                </TableView>
             </children>
-            <padding>
-               <Insets left="15.0" right="15.0" />
-            </padding>
          </HBox>
 
          <!-- Botones Inferiores -->
          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
             <Button fx:id="btnCancel" prefWidth="100.0" text="Cancel" />
             <Button fx:id="btnStart" onAction="#createTourney" prefWidth="100.0" text="Start" />
-            <padding>
-               <Insets bottom="10.0" />
-            </padding>
          </HBox>
       </VBox>
    </children>
