--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Style.css
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Style.css
@@ -1,7 +1,37 @@
 
 *{
-    -fx-lightBlue-base-color:#BBF6F9;
+    -fx-lightBlue-base-color: #BBF6F9; /*#16D4A5*/
     -fx-rose-base-color:#FFA5DB;
+}
+
+.ColorGreenBackground {
+    -fx-background-color:
+        radial-gradient(center 76.42% 75.00%, radius 100%, rgba(96, 71, 145, 1) 0%, rgba(96, 71, 145, 0) 100%),
+        radial-gradient(center 6.68% 69.12%, radius 100%, rgba(163, 114, 219, 1) 0%, rgba(163, 114, 219, 0) 100%),
+        radial-gradient(center 92.24% 63.15%, radius 100%, rgba(218, 162, 252, 1) 0%, rgba(218, 162, 252, 0) 100%),
+        radial-gradient(center 92.76% 3.50%, radius 100%, rgba(96, 71, 145, 1) 0%, rgba(96, 71, 145, 0) 100%),
+        radial-gradient(center 66.73% 69.96%, radius 100%, rgba(163, 114, 219, 1) 0%, rgba(163, 114, 219, 0) 100%),
+        radial-gradient(center 39.16% 71.63%, radius 100%, rgba(218, 162, 252, 1) 0%, rgba(218, 162, 252, 0) 100%);
+}
+
+.title-bar {
+    -fx-background-color: #F8F3FF;
+    -fx-background-radius: 20;
+    -fx-padding: 10.20;
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-font-family: "Segoe UI", "Century Gothic";
+    -fx-text-fill: #5D3F6A;
+    -fx-effect: dropshadow(gaussian, rgba(93, 63, 106, 0.3), 8, 0.2, 0, 2);
+}
+
+.hbox-cute {
+   -fx-background-color: #F3ECFB;
+    -fx-background-radius: 16;
+    -fx-border-color: #D9CBEF;
+    -fx-border-width: 1;
+    -fx-border-radius: 16;
+    -fx-effect: dropshadow(gaussian, rgba(89, 67, 104, 0.15), 6, 0.2, 0, 2);
 }
 
 .StoreBackground {
@@ -30,7 +60,7 @@
 .GameBackground{
     -fx-background-repeat: no-repeat;
     -fx-background-size: 100% 100%;
-    -fx-background-position: center center;   
+    -fx-background-position: center center;
 }
 
 .CameraIcon {
@@ -41,7 +71,7 @@
     -fx-image: url("../resources/SelectIcon.png");
 }
 
-#lobbyIcon {
+#LobbyIcon {
     -fx-image: url("../resources/LobbyIcon.png");
 }
 
@@ -180,7 +210,7 @@ TableViewRose:selected {
 }
 
 .InteractiveVBox:hover {
-    -fx-scale-x: 1.1; 
+    -fx-scale-x: 1.1;
     -fx-scale-y: 1.1;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 10, 0, 0, 2);
 }
@@ -196,8 +226,8 @@ TableViewRose:selected {
 
 .StarIcon:hover {
     -fx-rotate: 360;
-    -fx-scale-x: 1.2; 
-    -fx-scale-y: 1.2; 
+    -fx-scale-x: 1.2;
+    -fx-scale-y: 1.2;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 12, 0, 0, 3);
 }
 
@@ -206,18 +236,18 @@ TableViewRose:selected {
     -fx-text-fill: #444444;
     -fx-font-weight: bold;
     -fx-padding: 10px;
-    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1); 
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.2), 5, 0, 0, 1);
 }
 
 .LargeLabel:hover {
     -fx-text-fill: #FF72C7;
-    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.4), 7, 0, 0, 2); 
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.4), 7, 0, 0, 2);
     -fx-scale-x: 1.05;
     -fx-scale-y: 1.05;
 }
 
 .SmallLabel {
-    -fx-font-size: 16px; 
+    -fx-font-size: 16px;
     -fx-text-fill: #6C6FAE;
     -fx-font-weight: normal;
     -fx-padding: 5px;
@@ -226,7 +256,7 @@ TableViewRose:selected {
 
 .SmallLabel:hover {
     -fx-text-fill: #444444;
-    -fx-scale-x: 1.05; 
+    -fx-scale-x: 1.05;
     -fx-scale-y: 1.05;
 }
 
