--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
@@ -18,16 +18,17 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Label>
-            <ToolBar prefHeight="40.0" prefWidth="231.0" styleClass="boxRose" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
+            <ImageView fx:id="prueba" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+            <ToolBar prefHeight="40.0" prefWidth="231.0" styleClass="boxRose" stylesheets="@Style.css" VBox.vgrow="NEVER">
                <items>
                   <Label fx:id="lblFirstTeam" alignment="CENTER" contentDisplay="CENTER" text="0">
                      <padding>
-                        <Insets right="5.0" />
+                        <Insets right="13.0" />
                      </padding>
                   </Label>
                   <Label fx:id="lblSecondTeam" alignment="CENTER" text="0">
                      <padding>
-                        <Insets left="7.0" />
+                        <Insets left="13.0" />
                      </padding>
                   </Label>
                </items>
@@ -37,17 +38,17 @@
             </ToolBar>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                <children>
-                  <ImageView fx:id="mgvFirstTeam" fitHeight="110.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                  <ImageView fx:id="mgvFirstTeam" fitHeight="110.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
                      <HBox.margin>
                         <Insets left="10.0" right="40.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView fx:id="mgvBall" fitHeight="47.0" fitWidth="57.0" onMouseDragged="#onMouseDraggedMgvBall" onMousePressed="#onMousePressedMgvBall" onMouseReleased="#onMouseReleasedMgvBall" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                  <ImageView fx:id="mgvBall" fitHeight="47.0" fitWidth="57.0" onMouseDragged="#onMouseDraggedMgvBall" onMousePressed="#onMousePressedMgvBall" onMouseReleased="#onMouseReleasedMgvBall" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
                      <HBox.margin>
                         <Insets left="40.0" right="40.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView fx:id="mgvSecondTeam" fitHeight="110.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                  <ImageView fx:id="mgvSecondTeam" fitHeight="110.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
                      <HBox.margin>
                         <Insets left="40.0" right="10.0" />
                      </HBox.margin>
