--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
@@ -34,7 +34,7 @@
                         <Insets right="50.0" />
                      </HBox.margin>
                   </ImageView>
-                  <ImageView fx:id="mgvBall" fitHeight="50.0" fitWidth="50.0" onDragDetected="#onDragDetectedMgvBall" onMouseDragged="#onMouseDraggedMgvBall" onMousePressed="#onMousePressedMgvBall" onMouseReleased="#onMouseReleasedMgvBall" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="mgvBall" fitHeight="50.0" fitWidth="50.0" onDragDetected="#onDragDetectedMgvBall" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fx:id="mgvSecondTeam" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets left="50.0" />
@@ -50,10 +50,13 @@
                   <Insets bottom="5.0" left="15.0" right="15.0" top="10.0" />
                </padding>
             </Label>
-            <Label fx:id="lblTimer" alignment="CENTER" contentDisplay="CENTER" prefHeight="0.0" prefWidth="53.0" styleClass="TableViewLightdBlue" stylesheets="@Style.css" text="0:00" textAlignment="CENTER">
+            <Label fx:id="lblTimer" alignment="CENTER" contentDisplay="CENTER" prefHeight="0.0" prefWidth="70.0" styleClass="TableViewLightdBlue" stylesheets="@Style.css" text="0:00" textAlignment="CENTER">
                <padding>
-                  <Insets bottom="15.0" left="15.0" right="15.0" />
+                  <Insets left="15.0" right="15.0" />
                </padding>
+               <VBox.margin>
+                  <Insets top="4.0" />
+               </VBox.margin>
             </Label>
             <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="760.0">
                <children>
