--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MassRemoval.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MassRemoval.fxml
@@ -1,41 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXComboBox?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<TabPane prefHeight="412.0" prefWidth="551.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.MassRemovalController">
-   <tabs>
-      <Tab text="Equipos">
-         <content>
-            <VBox prefHeight="200.0" prefWidth="100.0" />
-         </content>
-      </Tab>
-      <Tab text="Reseñas">
-         <content>
-            <VBox>
+<AnchorPane prefHeight="453.0" prefWidth="629.0" styleClass="BusStopBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.MassRemovalController">
+   <children>
+      <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
+         <children>
+            <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
                <children>
-                  <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label text="Label" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
-                  <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
+                  <Label fx:id="labTitle" text="Label" />
                </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" spacing="15.0" styleClass="boxLightBlue" VBox.vgrow="ALWAYS">
+               <children>
+                  <MFXTextField fx:id="txtNameSearch" floatMode="BORDER" floatingText="Buscar por nombre" maxWidth="1.7976931348623157E308" onKeyReleased="#OnKeyReleasedNameSearch" HBox.hgrow="ALWAYS" />
+                  <MFXComboBox fx:id="cmbSportSearch" floatMode="BORDER" floatingText="Deporte" onAction="#OnActionCmbSportSearch">
+                     <HBox.margin>
+                        <Insets left="25.0" />
+                     </HBox.margin>
+                  </MFXComboBox>
+               </children>
+               <VBox.margin>
+                  <Insets left="15.0" right="15.0" />
+               </VBox.margin>
                <padding>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
                </padding>
+            </HBox>
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="20.0" spacing="20.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="20.0" styleClass="boxRose" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="labNameTable" text="Tabla" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="20.0" styleClass="boxRose" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="labNameTableDelete" text="Tabla" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
+                  <HBox spacing="15.0">
+                     <children>
+                        <TableView fx:id="tbvTeam" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#OnMouseClikedTbvTeam" styleClass="TableViewLightdBlue" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
+                           <padding>
+                              <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                           </padding>
+                           <columns>
+                              <TableColumn fx:id="tclTeam" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Nombre" />
+                              <TableColumn fx:id="tclTeamSportType" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Deporte" />
+                           </columns>
+                        </TableView>
+                        <TableView fx:id="tbvTourney" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#OnMouseClikedTbvTourney" styleClass="TableViewLightdBlue" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
+                           <padding>
+                              <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                           </padding>
+                           <columns>
+                              <TableColumn fx:id="tclTourney" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Nombre" />
+                              <TableColumn fx:id="tclTourneySportType" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Deporte" />
+                           </columns>
+                        </TableView>
+                        <TableView fx:id="tbvDeleteTeam" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#OnMouseClikedTbvDeleteTeam" styleClass="TableViewLightdBlue" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
+                           <padding>
+                              <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                           </padding>
+                           <columns>
+                              <TableColumn fx:id="tclDeleteTeam" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Nombre" />
+                              <TableColumn fx:id="tclDeleteTeamSportType" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Deporte" />
+                           </columns>
+                        </TableView>
+                        <TableView fx:id="tbvDeleteTourney" layoutX="214.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#OnMouseClikedTbvDeleteTeam" styleClass="TableViewLightdBlue" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
+                           <padding>
+                              <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                           </padding>
+                           <columns>
+                              <TableColumn fx:id="tclDeleteTourney" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Nombre" />
+                              <TableColumn fx:id="tclDeleteTourneySportType" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Deporte" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </HBox>
+               </children>
             </VBox>
-         </content>
-      </Tab>
-   </tabs>
-</TabPane>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="210.0" maxWidth="1.7976931348623157E308" spacing="40.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <MFXButton fx:id="btnCancel" onAction="#OnActionBtnCancel" text="Cancelar" />
+                  <MFXButton fx:id="btnDelete" onAction="#OnActionBtnDelete" text="Eliminar" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
+</AnchorPane>
