--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegistrationMaintenance.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/RegistrationMaintenance.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="PurpleBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegistrationMaintenanceController">
+<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="655.0" prefWidth="668.0" styleClass="PurpleBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.RegistrationMaintenanceController">
    <left>
       <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" prefWidth="121.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" styleClass="hbox-cute" VBox.vgrow="ALWAYS">
+            <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="hbox-cute" VBox.vgrow="ALWAYS">
                <children>
                   <Label text="Registro" />
                   <Separator prefWidth="200.0" />
@@ -24,7 +24,7 @@
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </VBox>
-            <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" styleClass="hbox-cute" VBox.vgrow="ALWAYS">
+            <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="hbox-cute" VBox.vgrow="ALWAYS">
                <children>
                   <Label text="Mantenimineto">
                      <padding>
@@ -39,6 +39,21 @@
                <VBox.margin>
                   <Insets />
                </VBox.margin>
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+            </VBox>
+            <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="hbox-cute" VBox.vgrow="ALWAYS">
+               <children>
+                  <Label text="Eliminación Masiva">
+                     <padding>
+                        <Insets top="15.0" />
+                     </padding>
+                  </Label>
+                  <Separator prefWidth="200.0" />
+                  <MFXButton fx:id="btnMassRemovalTeam" maxWidth="1.7976931348623157E308" onAction="#OnActionBtnMassRemovalTeam" text="Equipo" VBox.vgrow="ALWAYS" />
+                  <MFXButton fx:id="btnMassRemovalTourney" layoutX="19.0" layoutY="139.0" maxWidth="1.7976931348623157E308" onAction="#OnActionBtnMassRemovalTourney" text="Torneo" />
+               </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
